--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://borisovya.github.io/todo14v2",
   "name": "todo14v2",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/uuid": "^8.3.1",
     "axios": "^0.22.0",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -28,6 +30,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
